【同步】jdk21 和 jdk8 的代码